# obsidian-forge

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  README.md  SECURITY.md  SKILL.md  build.rs  dist-workspace.toml  install.ps1  install.sh  tauri.conf.json
.cargo/: config.toml
.claude/: settings.local.json
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  dashboard-release.yml  publish-crates.yml  release.yml
docs/: AI_DESIGN_PRINCIPLES.md  README_de.md  README_es.md  README_fr.md  README_ja.md  README_ko.md  README_pt-BR.md  README_ru.md  README_tr.md  README_zh-CN.md
docs/plan/: plan_20260325_015843.md  plan_20260325_020000.md  plan_20260325_020528.md
docs/policy/: INBOX_CLASSIFICATION_GUIDE.md  ONTOLOGY_TAGGING_STANDARD.md  RESOURCE_TO_ZETTEL_WORKFLOW.md  ZETTEL_PROMOTION_DASHBOARD.md  ZETTEL_TEMPLATE.md
icons/: icon.icns
skills/graph-strengthen/: SKILL.md
skills/inbox-process/: SKILL.md
skills/vault-fix/: SKILL.md
skills/vault-health/: SKILL.md
skills/vault-sync/: SKILL.md
src/: ai.rs  book.rs  check_links.rs  check_tags.rs  config.rs  converter.rs  frontmatter.rs  git.rs  graph.rs  index.rs  init.rs  main.rs  moc.rs  notes.rs  prompts.rs  vault_utils.rs  watcher.rs
src/dashboard/: commands.rs  mod.rs  models.rs  scoring.rs
src/graph/: autotag.rs  backlinks.rs  bridges.rs  health.rs  mod.rs  orphans.rs  relationships.rs  scan.rs  tags.rs  wikilinks.rs
src/templates/: AGENTS.md  ARCHITECTURE.md  Book-Chapter-Draft.md  Book-Note.md  Book-Project-MOC.md  CONVENTIONS.md  Code-Snippet.md  DEBT.md  DECISIONS.md  Daily-Note.md  Goal.md  Habit-Tracker.md  MOC.md  Meeting-Note.md  Monthly-Retrospective.md  PRD.md  PROGRESS.md  Project-Note.md  Quick-Capture.md  SECRETS_MAP.md  TAGGING.md  Weekly-Review.md  ZK-Note.md
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.svelte  app.css
ui/src/components/: AttentionPanel.svelte  CardGrid.svelte  Sidebar.svelte  TimeFilter.svelte
ui/src/lib/: api.ts  stores.svelte.ts  types.ts
