[package]
name = "obsidian-forge"
version = "0.1.2"
edition = "2021"
description = "Obsidian vault generator, automation daemon, and graph strengthener"
license = "Apache-2.0"
repository = "https://github.com/epicsagas/obsidian-forge"
keywords = ["obsidian", "vault", "pkm", "zettelkasten", "automation"]
categories = ["command-line-utilities"]

[[bin]]
name = "obsidian-forge"
path = "src/main.rs"

[[bin]]
name = "of"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "1.0"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "time", "sync", "process", "fs", "io-util"] }
notify = "8.2"
regex = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
walkdir = "2.5"
chrono = { version = "0.4", features = ["clock"] }
dotenv = "0.15"
reqwest = { version = "0.13", features = ["json"] }
futures = "0.3"
rayon = "1.8"
tokio-stream = "0.1"
